<resources>
    <string name="app_name">newModuleFive</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="display_text">Display Text</string>
    <string name="module_5_example_program">Module 5 Example Program</string>

    <string name="spinner_xml_file_text">Spinner with items in XML file</string>
    <string-array name="planets_array">
            <item>Mercury</item>
            <item>Venus</item>
            <item>Earth</item>
            <item>Mars</item>
            <item>Jupiter</item>
            <item>Saturn</item>
            <item>Uranus</item>
            <item>Neptune</item>
    </string-array>

</resources>
